# starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  QUERY_FLOW.md  format.sh  frontend-changes.md  pyproject.toml  quality_check.sh  run.sh
.claude/commands/: implement-features.md
backend/: ai_generator.py  app.py  document_processor.py  models.py  pytest.ini  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  fixtures.py  test_ai_generator.py  test_api.py  test_course_outline_tool.py  test_course_search_tool.py  test_rag_system.py
frontend/: index.html  script.js  style.css
